css/style.css
* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
}

body {
   font-family: 'Lato', sans-serif;
   color: #FFF;
}

ul {
   list-style: none;
}

.inline-block {
   display: inline-block;
}

.chevron i {
   display: fle;
   font-size: 1rem;
}

/* HEADER  */
header {
   width: 100vw;
   height: 50px;
   padding: 13px;
   position: fixed;
   top: 0;
   display: flex;
   justify-content: flex-end;
   background-color: #000;
   z-index: 999;
}

header .label-header {
   margin-left: 5px;
   cursor: pointer;
}

header .label-header span {
   padding: 7px 11px;
   background-color: #4A4A4A;
   border-radius: 5px;
}

/* MAIN  */
main {
   margin: 50px 0 100px 0;
   background-color: #000;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
}

.user {
   position: relative;
   margin: 5px;
}

.user img {
   height: 100%;
}

.user .label {
   padding: 7px 10px;
   background-color: rgba(0, 0, 0, .6);
   position: absolute;
   bottom: 0;
   left: 0;
}
/* NAV BAR  */
nav {
   width: 100vw;
   height: 100px;
   position: fixed;
   bottom: 0;
   background-color: #222;
   display: flex;
   justify-content: space-between;
   align-items: center;
}

nav p {
   padding: 10px 0 0 0;
}

nav i {
   font-size: 40px;
}

/* audio video  */
.audio-video {
   display: flex;
}

.box {
   padding: 0 15px;
   cursor: pointer;
}

.audio-video .box .inline-block {
   text-align: center;
   vertical-align: middle;
}

.audio-video .box .chevron {
   padding: 0 14px;
}

/* options  */
.options ul {
   width: 900px;
   display: flex;
   justify-content: space-evenly;
}

.options ul li {
   text-align: center;
   cursor: pointer;
}

.options ul li .inline-block {
   vertical-align: middle;
}

.options ul li .fa-share-square {
   color: #4BC800;
}

/* end meeting  */
.end-meeting {
   height: 100%;
   font-size: 20px;
   color: #DA1010;
   background-color: #4A4A4A;
   cursor: pointer;
}

.end-meeting p {
   padding: 0 30px;
   line-height: 100px;
   font-weight: bolder;
}

